force-app/main/default/objects/US_Back_Office_Settings__c/US_Back_Office_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is where the Back-Office settings US are defined (Url., Username, Password).</description>
    <label>U.S. Back-Office Settings</label>
</CustomObject>