force-app/main/default/objects/US_Back_Office_Settings__c/fields/Backoffice_URL__c.field-meta.xml
<CustomField>
    <fullName>Backoffice_URL__c</fullName>
    <description>Root U.R.L. of the Back-Office REST A.P.I.&apos;s end-point</description>
    <label>BackOffice U.R.L.</label>
    <required>true</required>
    <type>Url</type>
</CustomField>