force-app/main/default/objects/US_Back_Office_Settings__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <description>password used to connect to the back office</description>
    <label>password</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>