force-app/main/default/objects/US_Back_Office_Settings__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <description>username used to connect to the back office</description>
    <label>username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>